--- a/bowtie/1.1.2/Dockerfile
+++ b/bowtie/1.1.2/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.home="http://bowtie-bio.sourceforge.net/index.shtml"
 LABEL about.documentation="http://bowtie-bio.sourceforge.net/manual.shtml"
 LABEL about.license_file="http://bowtie-bio.sourceforge.net/index.shtml"
 LABEL about.license="SPDX:Artistic-2.0"
+LABEL extra.identifiers.biotools="bowtie"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
