--- a/clustal-omega/1.2.1-1/Dockerfile
+++ b/clustal-omega/1.2.1-1/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="http://www.clustal.org/omega/"
 LABEL about.documentation="http://www.clustal.org/omega/#about.documentation"
 LABEL about.license_file="http://www.clustal.org/omega/"
 LABEL about.license="SPDX:GPL-2.0"
+LABEL extra.identifiers.biotools="clustal_omega_ebi"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
