--- a/crux/2.1/Dockerfile
+++ b/crux/2.1/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="http://cruxtoolkit.sourceforge.net/"
 LABEL about.documentation="http://cruxtoolkit.sourceforge.net/"
 LABEL about.license_file="http://cruxtoolkit.sourceforge.net/"
 LABEL about.license="SPDX:Apache-2.0"
+LABEL extra.identifiers.biotools="crux"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
