--- a/denovogui/1.10.4/Dockerfile
+++ b/denovogui/1.10.4/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="https://github.com/compomics/denovogui"
 LABEL about.documentation="https://github.com/compomics/denovogui"
 LABEL about.license_file="https://github.com/compomics/denovogui"
 LABEL about.license="SPDX:Apache-2.0"
+LABEL extra.identifiers.biotools="denovogui"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
