--- a/discovardenovo/52488/Dockerfile
+++ b/discovardenovo/52488/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.summary="Genome variant discovery through assembly"
 LABEL about.home="http://www.broadinstitute.org/software/discovar/blog/?page_id=19"
 LABEL about.documentation="http://www.broadinstitute.org/software/discovar/blog/?page_id=19"
 LABEL about.license_file="ftp://ftp.broadinstitute.org/pub/crd/Discovar/LICENSE"
+LABEL extra.identifiers.biotools="discovar_de_novo"
 LABEL about.tags="Genomics"
 
 
