--- a/fastqc/0.11.5/Dockerfile
+++ b/fastqc/0.11.5/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/"
 LABEL about.documentation="http://www.bioinformatics.babraham.ac.uk/projects/fastqc/Help/"
 LABEL about.license_file="https://www.gnu.org/copyleft/gpl.html"
 LABEL about.license="SPDX:GPL-3.0"
+LABEL extra.identifiers.biotools="fastqc"
 LABEL about.tags="General"
 
 
