--- a/fastxtools/0.0.14/Dockerfile
+++ b/fastxtools/0.0.14/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="http://hannonlab.cshl.edu/fastx_toolkit/"
 LABEL about.documentation="http://hannonlab.cshl.edu/fastx_toolkit/commandline.html"
 LABEL about.license_file="http://hannonlab.cshl.edu/fastx_toolkit/license.html"
 LABEL about.license="SPDX:AGPL-3.0-only"
+LABEL extra.identifiers.biotools="fastx-toolkit"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
