--- a/openms/2.0.0/Dockerfile
+++ b/openms/2.0.0/Dockerfile
@@ -13,6 +13,7 @@ LABEL about.documentation="http://open-ms.sourceforge.net/"
 LABEL about.license_file="https://github.com/OpenMS/OpenMS/blob/develop/LICENSE"
 LABEL about.license="SPDX:BSD-1-Clause"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="openms"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
