--- a/pepnovo+/20120423/Dockerfile
+++ b/pepnovo+/20120423/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.documentation="http://proteomics.ucsd.edu/Software/PepNovo/"
 LABEL about.license_file="http://proteomics.ucsd.edu/Software/PepNovo/"
 LABEL about.license="SPDX:CC-BY-NC-4.0"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="pepnovo"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
