--- a/percolator/3.0/Dockerfile
+++ b/percolator/3.0/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.documentation="http://percolator.ms/"
 LABEL about.license_file="https://github.com/percolator/percolator/blob/master/license.txt"
 LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="percolator"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
