--- a/proteinprophet/201510131012/Dockerfile
+++ b/proteinprophet/201510131012/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="http://proteinprophet.sourceforge.net/"
 LABEL about.documentation="http://proteinprophet.sourceforge.net/"
 LABEL about.license_file="http://proteinprophet.sourceforge.net/"
 LABEL about.license="SPDX:GPL-2.0-only"
+LABEL extra.identifiers.biotools="proteinprophet"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
