--- a/samtools/1.2/Dockerfile
+++ b/samtools/1.2/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.documentation="https://github.com/samtools/samtools"
 LABEL about.license_file="https://github.com/samtools/samtools/blob/develop/LICENSE"
 LABEL about.license="SPDX:MIT"
 LABEL about.tags="Genomics"
+LABEL extra.identifiers.biotools="SAM"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
