--- a/spades/3.6.0/Dockerfile
+++ b/spades/3.6.0/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.documentation="http://bioinf.spbau.ru/spades"
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
 LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
+LABEL extra.identifiers.biotools="Spades"
 
 
 ################## BEGIN INSTALLATION ######################
