--- a/bedtools/2.25.0/Dockerfile
+++ b/bedtools/2.25.0/Dockerfile
@@ -13,6 +13,7 @@ LABEL about.home="http://bedtools.readthedocs.io/en/latest/"
 LABEL about.documentation="http://quinlanlab.org/tutorials/bedtools/bedtools.html"
 LABEL about.license_file="https://github.com/arq5x/bedtools2/blob/master/LICENSE"
 LABEL about.license="SPDX:LGPL-2.0-only"
+LABEL extra.identifiers.biotools="bedtools"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
