--- a/novor/1b/Dockerfile
+++ b/novor/1b/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="http://www.rapidnovor.com/"
 LABEL about.documentation="http://www.rapidnovor.com/"
 LABEL about.license_file="https://www.rapidnovor.com/rndl/novor_aca_eula.txt"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="novor"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
