--- a/peptideprophet/201510131012/Dockerfile
+++ b/peptideprophet/201510131012/Dockerfile
@@ -13,6 +13,7 @@ LABEL about.documentation="http://peptideprophet.sourceforge.net/"
 LABEL about.license_file="http://peptideprophet.sourceforge.net/"
 LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="peptideprophet"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
