--- a/proteowizard/3_0_9740/Dockerfile
+++ b/proteowizard/3_0_9740/Dockerfile
@@ -11,6 +11,7 @@ LABEL about.home="http://proteowizard.sourceforge.net/"
 LABEL about.documentation="http://proteowizard.sourceforge.net/"
 LABEL about.license_file="http://proteowizard.sourceforge.net/"
 LABEL about.license="SPDX:Apache-2.0"
+LABEL extra.identifiers.biotools="proteowizard"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
