--- a/tandem/10-12-01-1/Dockerfile
+++ b/tandem/10-12-01-1/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.documentation="http://www.thegpm.org/tandem/"
 LABEL about.license_file="https://opensource.org/licenses/artistic-license-1.0"
 LABEL about.license="SPDX:Artistic-2.0"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="xtandem"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
