--- a/tandem/15-12-15-2/Dockerfile
+++ b/tandem/15-12-15-2/Dockerfile
@@ -13,6 +13,7 @@ LABEL about.documentation="http://www.thegpm.org/tandem/"
 LABEL about.license_file="http://www.thegpm.org/tandem/"
 LABEL about.license="SPDX:Artistic-2.0"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="xtandem"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
