--- a/velvet/1.2.10/Dockerfile
+++ b/velvet/1.2.10/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.documentation="https://www.zfmk.de/dateien/atoms/files/aliscore_v.2.
 LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
 LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
+LABEL extra.identifiers.biotools="velvet"
 
 ENV ZIP=velvet_1.2.10.tgz
 ENV URL=https://github.com/BioDocker/software-archive/releases/download/velvet/
