--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,156 @@
 [submodule "container-isatab2json"]
 	path = container-isatab2json
 	url = https://github.com/phnmnl/container-isatab2json
+[submodule "container-ipo"]
+	path = container-ipo
+	url = https://github.com/phnmnl/container-ipo
+[submodule "container-mtblisa"]
+	path = container-mtblisa
+	url = https://github.com/phnmnl/container-mtblisa
+[submodule "container-batch_correction"]
+	path = container-batch_correction
+	url = https://github.com/phnmnl/container-batch_correction
+[submodule "container-csifingerid"]
+	path = container-csifingerid
+	url = https://github.com/phnmnl/container-csifingerid
+[submodule "container-bruker2batman"]
+	path = container-bruker2batman
+	url = https://github.com/phnmnl/container-bruker2batman
+[submodule "container-isatab-create"]
+	path = container-isatab-create
+	url = https://github.com/phnmnl/container-isatab-create
+[submodule "container-metfrag-cli-batch"]
+	path = container-metfrag-cli-batch
+	url = https://github.com/c-ruttkies/container-metfrag-cli-batch
+[submodule "container-isatab-validator"]
+	path = container-isatab-validator
+	url = https://github.com/phnmnl/container-isatab-validator
+[submodule "container-mtbls-dwnld"]
+	path = container-mtbls-dwnld
+	url = https://github.com/phnmnl/container-mtbls-dwnld
+[submodule "container-nmrml2isa"]
+	path = container-nmrml2isa
+	url = https://github.com/phnmnl/container-nmrml2isa
+[submodule "container-dimspy"]
+	path = container-dimspy
+	url = https://github.com/phnmnl/container-dimspy
+[submodule "container-mzml2isa"]
+	path = container-mzml2isa
+	url = https://github.com/phnmnl/container-mzml2isa
+[submodule "container-iso2flux"]
+	path = container-iso2flux
+	url = https://github.com/phnmnl/container-iso2flux
+[submodule "container-escher-fluxomics"]
+	path = container-escher-fluxomics
+	url = https://github.com/phnmnl/container-escher-fluxomics
+[submodule "container-isaslicer"]
+	path = container-isaslicer
+	url = https://github.com/phnmnl/container-isaslicer
+[submodule "container-batman"]
+	path = container-batman
+	url = https://github.com/phnmnl/container-batman
+[submodule "container-qualitymetrics"]
+	path = container-qualitymetrics
+	url = https://github.com/phnmnl/container-qualitymetrics
+[submodule "container-pathwayEnrichment"]
+	path = container-pathwayEnrichment
+	url = https://github.com/phnmnl/container-pathwayEnrichment
+[submodule "nmrprocflow-ie"]
+	path = nmrprocflow-ie
+	url = https://github.com/phnmnl/nmrprocflow-ie
+[submodule "container-stocsy"]
+	path = container-stocsy
+	url = https://github.com/phnmnl/container-stocsy
+[submodule "container-rdolphin"]
+	path = container-rdolphin
+	url = https://github.com/phnmnl/container-rdolphin
+[submodule "container-biosigner"]
+	path = container-biosigner
+	url = https://github.com/phnmnl/container-biosigner
+[submodule "container-rnmr1d"]
+	path = container-rnmr1d
+	url = https://github.com/phnmnl/container-rnmr1d
+[submodule "container-speaq"]
+	path = container-speaq
+	url = https://github.com/phnmnl/container-speaq
+[submodule "container-nmrmlconv"]
+	path = container-nmrmlconv
+	url = https://github.com/phnmnl/container-nmrmlconv
+[submodule "container-xcms-1.x"]
+	path = container-xcms-1.x
+	url = https://github.com/phnmnl/container-xcms-1.x
+[submodule "container-metfrag-vis"]
+	path = container-metfrag-vis
+	url = https://github.com/phnmnl/container-metfrag-vis
+[submodule "container-passatutto"]
+	path = container-passatutto
+	url = https://github.com/phnmnl/container-passatutto
+[submodule "container-camera"]
+	path = container-camera
+	url = https://github.com/phnmnl/container-camera
+[submodule "container-msnbase"]
+	path = container-msnbase
+	url = https://github.com/phnmnl/container-msnbase
+[submodule "container-isajson-validator"]
+	path = container-isajson-validator
+	url = https://github.com/phnmnl/container-isajson-validator
+[submodule "container-scp-aspera"]
+	path = container-scp-aspera
+	url = https://github.com/phnmnl/container-scp-aspera
+[submodule "container-univariate"]
+	path = container-univariate
+	url = https://github.com/phnmnl/container-univariate
+[submodule "container-tool-generic_filter"]
+	path = container-tool-generic_filter
+	url = https://github.com/phnmnl/container-tool-generic_filter
+[submodule "container-ms-vfetc"]
+	path = container-ms-vfetc
+	url = https://github.com/phnmnl/container-ms-vfetc
+[submodule "container-lcmsmatching"]
+	path = container-lcmsmatching
+	url = https://github.com/phnmnl/container-lcmsmatching
+[submodule "container-isa2w4m"]
+	path = container-isa2w4m
+	url = https://github.com/phnmnl/container-isa2w4m
+[submodule "container-metabolab"]
+	path = container-metabolab
+	url = https://github.com/phnmnl/container-metabolab
+[submodule "container-cdf2mid"]
+	path = container-cdf2mid
+	url = https://github.com/seliv55/container-cdf2mid
+[submodule "container-nmrML2BATMAN"]
+	path = container-nmrML2BATMAN
+	url = https://github.com/phnmnl/container-nmrML2BATMAN
+[submodule "container-nmrglue"]
+	path = container-nmrglue
+	url = https://github.com/phnmnl/container-nmrglue
+[submodule "container-soap-nmr"]
+	path = container-soap-nmr
+	url = https://github.com/phnmnl/container-soap-nmr
+[submodule "container-rnmr"]
+	path = container-rnmr
+	url = https://github.com/phnmnl/container-rnmr
+[submodule "container-ramid"]
+	path = container-ramid
+	url = https://github.com/phnmnl/container-ramid
+[submodule "container-metfrag-cli"]
+	path = container-metfrag-cli
+	url = https://github.com/phnmnl/container-metfrag-cli
+[submodule "container-papy"]
+	path = container-papy
+	url = https://github.com/phnmnl/container-papy
+[submodule "container-metaMS"]
+	path = container-metaMS
+	url = https://github.com/phnmnl/container-metaMS
+[submodule "container-xcms-w4m"]
+	path = container-xcms-w4m
+	url = https://github.com/phnmnl/container-xcms-w4m
+[submodule "container-nmrprocflow"]
+	path = container-nmrprocflow
+	url = https://github.com/phnmnl/container-nmrprocflow
+[submodule "container-nmrpro"]
+	path = container-nmrpro
+	url = https://github.com/phnmnl/container-nmrpro
+[submodule "container-metfamily"]
+	path = container-metfamily
+	url = https://github.com/phnmnl/container-metfamily
